--- a/app/views/todos/new.html.erb
+++ b/app/views/todos/new.html.erb
@@ -1,15 +1,3 @@
 <h1>New Todo</h1>
 
-<%= form_with model: @todo do |form| %>
-    <div>
-        <%= form.label :task %> <br>
-        <%= form.text_field :task %>
-        <% @todo.errors.full_messages_for(:task).each do |message| %>
-            <div> <%= message %> </div>
-        <% end %>
-    </div>
-
-    <div>
-        <%= form.submit %>
-    </div>
-<% end %>
+<%= render "form", todo: @todo %>
