--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -1,20 +1,13 @@
 <%= turbo_include_tags %>
 
-<h1>Todos</h1>
+<h1 class="text-4xl font-semibold text-center mb-4">Todos</h1>
 
-<ul>
-    <% @todos.each do |todo| %>
-        <li>
-            <input type="checkbox">
-                <%= link_to todo.task, todo %>
-            </input>
-            <%= link_to "Edit", edit_todo_path(todo) %>
-            <%= link_to "Delete", todo_path(todo), data: {
-                    turbo_method: :delete,
-                    turbo_confirm: "Are you sure?"
-                } %>
-        </li>
-    <% end %>
-</ul>
+<div class="flex gap-4 flex-col bg-gray-100 p-4 rounded w-[80%] mx-auto">
+    <ul class="flex flex-col gap-2">
+        <% @todos.each do |todo| %>
+            <%= render todo %>
+        <% end %>
+    </ul>
+</div>
 
-<%= link_to "Create Todo", new_todo_path(@todo) %>
+<%= link_to "Create Todo", new_todo_path(@todo), class: "block w-[80%] mx-auto py-2 px-4 bg-blue-400 rounded mt-4 text-center text-white" %>
