--- a/app/views/todos/_form.html.erb
+++ b/app/views/todos/_form.html.erb
@@ -1,13 +1,12 @@
-<%= form_with model: todo do |form| %>
-    <div>
-      <%= form.label :task %><br>
-      <%= form.text_field :task %>
+<%= form_with url: "/todos", class:"flex justify-center w-[80%] mx-auto my-8 gap-1", model: todo do |form| %>
+  <div class="w-full">
+      <%= form.text_field :task, class: "flex w-full p-1 h-full rounded" %>
       <% todo.errors.full_messages_for(:task).each do |message| %>
         <div><%= message %></div>
       <% end %>
-    </div>
-  
-    <div>
-      <%= form.submit %>
-    </div>
-  <% end %>
+  </div>
+
+  <div>
+      <%= form.submit class: "flex bg-blue-400 text-white h-full px-4 py-2 text-center cursor-pointer rounded" %>
+  </div>
+<% end %>
