--- a/app/views/todos/_form.html.erb
+++ b/app/views/todos/_form.html.erb
@@ -1,8 +1,8 @@
-<%= form_with url: "/todos", class:"flex justify-center w-[80%] mx-auto my-8 gap-1", model: todo do |form| %>
+<%= form_with id: "#{dom_id(todo)}_form", url: "/todos", class:"flex justify-center w-[80%] mx-auto my-8 gap-1", model: todo do |form| %>
   <div class="w-full">
       <%= form.text_field :task, class: "flex w-full p-1 h-full rounded" %>
       <% todo.errors.full_messages_for(:task).each do |message| %>
-        <div><%= message %></div>
+        <div class="text-red-500"><%= message %></div>
       <% end %>
   </div>
 
