Replace form when adding new item in todo

--- a/app/views/todos/create.turbo_stream.erb
+++ b/app/views/todos/create.turbo_stream.erb
@@ -1,3 +1,7 @@
 <%= turbo_stream.append "todo-list" do %>
   <%= render @todo %>
 <% end %>
+
+<%= turbo_stream.replace "#{dom_id(Todo.new)}_form" do %>
+  <%= render "form", todo: Todo.new %>
+<% end %>
