--- a/app/views/todos/_todo.html.erb
+++ b/app/views/todos/_todo.html.erb
@@ -9,8 +9,7 @@
         <%= link_to "Delete", todo_path(todo),
             class: "px-2 py-1 rounded bg-red-400 text-white",
             data: {
-                turbo_method: :delete,
-                turbo_confirm: "Are you sure?"
+                turbo_method: :delete
             } %>
     </div>
 </li>
