Fix dom_id generation

--- a/app/views/todos/_todo.html.erb
+++ b/app/views/todos/_todo.html.erb
@@ -1,4 +1,4 @@
-<li class="flex items-center gap-2 w-full" id="#{dom_id(todo)}_item">
+<li class="flex items-center gap-2 w-full" id='<%= "#{dom_id(todo)}_item" %>'>
     <input type="checkbox" <%= "checked" if todo.is_done? %>>
         <%= button_to todo.task, todo_path(todo, todo: {task: todo.task, "is_done": !todo.is_done}), method: :patch, class: "#{"line-through" if todo.is_done?}" %>
     </input>
