--- a/app/views/todos/update.turbo_stream.erb
+++ b/app/views/todos/update.turbo_stream.erb
@@ -1,3 +1,3 @@
-<%= turbo_stream.replace "todo-list-wrapper" do %>
-    <%= render "todos", todos: Todo.all %>
+<%= turbo_stream.replace "#{dom_id(@todo)}_item" do %>
+    <%= render "todo", todo: @todo %>
 <% end %>
